--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -284,44 +284,44 @@ Full-Width Styles
   display: block;
   position: absolute;
   top:10;
-  right: 10px;
+  right:-200px;
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('../images/blacktocat.png') #000509 no-repeat 95% 50%;
   font-weight: 700;
-  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  // box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(to top, #373737, #212121);
+  background: #2987f3;
+  background: -moz-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: -webkit-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: -ms-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: -o-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: linear-gradient(to top,#80bef8d6, #4a90e2);
 }
 
 #header_wrap .inner {
-  padding: 50px 80px 30px 80px;
+  padding: 50px 120px 30px 120px;
 }
 
 #project_title {
   margin: 0;
-  color: #fff;
+  color: #000000;
   font-size: 42px;
   font-weight: 700;
-  text-shadow: #111 0px 0px 10px;
+  // text-shadow: #111 0px 0px 10px;
 }
 
 #project_tagline {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 300;
+  color: #000000;
+  font-size: 25px;
+  font-weight: 700;
   background: none;
-  text-shadow: #111 0px 0px 10px;
+  // text-shadow: #111 0px 0px 10px;
 }
 
 #downloads {
@@ -374,7 +374,12 @@ Full-Width Styles
 }
 
 #footer_wrap {
-  background: #212121;
+  background: #2987f3;
+  background: -moz-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: -webkit-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: -ms-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: -o-linear-gradient(top,#80bef8d6, #4a90e2);
+  background: linear-gradient(to top,#80bef8d6, #4a90e2);
 }
 
 
